--- a/index.html
+++ b/index.html
@@ -1,60 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Shapes Moving with HTML5 Canvas</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Web Animation(canvas_js_css)[1단원-3]</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      font-family: sans-serif;
+    }
+
+    #canvas {
+      background: #DCD7C9;
+      display: block;
+      margin: 0 auto;
+    }
+
+    /* PC에서는 600x600 고정 */
+    @media (min-width: 769px) {
+      #canvas {
+        width: 600px;
+        height: 600px;
+      }
+    }
+  </style>
 </head>
 <body>
-  <canvas id="myCanvas" width="400" height="300"
-     style="border: 1px solid black;"></canvas>
-
+	<canvas id="canvas"></canvas>
   <script>
-    // Get the canvas and its 2D context
-    const canvas = document.getElementById('myCanvas');
-    const ctx = canvas.getContext('2d');
+    const drawingBoard = document.getElementById('canvas');
+    const drawingPen = drawingBoard.getContext('2d');
 
-    // Set the initial position of the shape
-    let x = 150;
-    let y = 100;
-    const shapeSize = 50;
-    const moveSpeed = 5;
+    // 캔버스 크기를 CSS와 맞춰줌 (중요!)
+    drawingBoard.width = drawingBoard.clientWidth;
+    drawingBoard.height = drawingBoard.clientHeight;
 
-    // Function to draw the shape on the canvas
-    function drawShape() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.fillStyle = "rgb(255, 0,0)";
-        ctx.fillRect(x, y, shapeSize, shapeSize);
+    let x = (drawingBoard.width - 10) / 2;
+    let y = (drawingBoard.height - 10) / 2;
+
+    const moveAmount = 5;
+
+    function moveRight() {
+      x = x + moveAmount;
     }
 
-    // Function to handle keyboard events
-    function handleKeyDown(event) {
-        // Arrow keys (left, right, up, down) have key codes 37, 39, 38, 40
-        switch (event.keyCode) {
-            case 37: // Left arrow
-                x -= moveSpeed;
-                break;
-            case 39: // Right arrow
-                x += moveSpeed;
-                break;
-            case 38: // Up arrow
-                y -= moveSpeed;
-                break;
-            case 40: // Down arrow
-                y += moveSpeed;
-                break;
-        }
+    function moveLeft() {
+      x = x - moveAmount;
     }
 
-    // Event listener for keydown events
-    document.addEventListener('keydown', handleKeyDown);
-
-    // Function to update the canvas
-    function updateCanvas() {
-        drawShape();
-        requestAnimationFrame(updateCanvas);
+    function moveDown() {
+      y = y + moveAmount;
     }
 
-    // Start the animation
-    updateCanvas();
-</script>
+    function moveUp() {
+      y = y - moveAmount;
+    }
+
+    function drawHero() {
+      drawingPen.fillStyle = 'black';
+      drawingPen.fillRect(x, y, 10, 10);
+    }
+
+    function draw() {
+      drawingPen.clearRect(0, 0, canvas.width, canvas.height);
+      drawHero();
+    }
+
+    setInterval(draw, 16); // 60 FPS
+	
+    // PC 방향키 조작
+    document.addEventListener('keydown', (e) => {
+      switch (e.key) {
+        case 'ArrowLeft': moveLeft(); break;
+        case 'ArrowRight': moveRight(); break;
+        case 'ArrowUp': moveUp(); break;
+        case 'ArrowDown': moveDown(); break;
+      }
+    });
+  </script>  
 </body>
 </html>
+
