--- a/index.html
+++ b/index.html
@@ -19,98 +19,156 @@
       margin: 0 auto;
     }
 
+    /* ★1_5 : PC 안내 문구 기본은 숨김 */
+    .pc-guide {
+        display: none;
+        margin-top: 10px;  
+        font-size: 16px; 
+        color: #333; 
+        font-weight: bold; 
+    }      
+
     /* PC에서는 600x600 고정 */
     @media (min-width: 769px) {
-      #canvas {
-        width: 600px;
-        height: 600px;
-      }
+        #canvas {
+            width: 600px;
+            height: 600px;
+        }
+
+        .pc-guide {
+            display: block;  
+        }      
+    }  
+
+    /* ★1_5 : 버튼들을 감싸는 div 숨기기 (PC에서는 안 보이게하고 스마트폰에서 접속이 보임) */
+    .controls {
+        display: none; 
+        margin-top: 10px; 
+    }
+
+    /* ★1_5 : 스마트폰에서 보여질 버튼 모양 설정 */
+    .controls button {
+        font-size: 18px; 
+        padding: 10px 20px;
+        margin: 5px; 
+    }
+
+    /* ★1_5 : 화면이 작을 때 (스마트폰 등에서 보인다면 아래 코드동작)
+    */
+    @media (max-width: 768px) {
+        #canvas {
+            width: 100vw;
+            height: 100vw; 
+        }
+        .controls {
+            display: block;
+        }
+        .pc-guide {
+            display: none; 
+        }         
     }
   </style>
 </head>
 <body>
-  <!-- 애니메이션 화면 만들기 -->
-	<canvas id="canvas"></canvas>
-  <script>
-    // 캔버스 요소 JS 변수만들기
-    const drawingBoard = document.getElementById('canvas');
-    // 캔버스에 2D그림을 그리는 도구 변수만들기
-    const drawingPen = drawingBoard.getContext('2d');
+    <!-- 애니메이션 화면 만들기 -->
+    <canvas id="canvas"></canvas>
 
-    // 캔버스 크기를 CSS와 맞춰줌 (중요!)
-    drawingBoard.width = drawingBoard.clientWidth;
-    drawingBoard.height = drawingBoard.clientHeight;
+    <!-- ★1_5 : 애니메이션 화면 만들기 : 스마트폰에서 접속 할 때만 controls이 보이게됨-->
+    <div class="controls">
+        <button id="leftBtn">◀</button>
+        <button id="rightBtn">▶</button>
+        <button id="upBtn">▲</button>
+        <button id="downBtn">▼</button>
+    </div>
 
-    // 화면 가운데 위치
-    let x = (drawingBoard.width - 10) / 2;
-    let y = (drawingBoard.height - 10) / 2;
-
-    // 주인공 이동속도
-    const moveAmount = 5;
-
-    // 주인공 이동함수
-    function moveRight() {
-      x = x + moveAmount;
-    }
-
-    function moveLeft() {
-      x = x - moveAmount;
-    }
-
-    function moveDown() {
-      y = y + moveAmount;
-    }
-
-    function moveUp() {
-      y = y - moveAmount;
-    }
-
-    //★1_4 : 주인공 이동제한
-    function move_limit(){
-      if (x < 0) { //왼쪽이동제한
-        x = 0;
-      }
+    <!-- ★1_5 : PC 전용 안내 문구 -->
+    <div class="pc-guide">
+        PC에서 접속했습니다. 방향키로 이동하세요.<br>
+        스마트폰은 접속 시 보이는 버튼으로 이동하세요.
+    </div>
 
 
+    <script>
+        // 캔버스 요소 JS 변수만들기
+        const drawingBoard = document.getElementById('canvas');
+        // 캔버스에 2D그림을 그리는 도구 변수만들기
+        const drawingPen = drawingBoard.getContext('2d');
 
+        // 캔버스 크기를 CSS와 맞춰줌 (중요!)
+        drawingBoard.width = drawingBoard.clientWidth;
+        drawingBoard.height = drawingBoard.clientHeight;
 
-    }
+        // 화면 가운데 위치
+        let x = (drawingBoard.width - 10) / 2;
+        let y = (drawingBoard.height - 10) / 2;
 
-    //★1_4 : 캔버스 왼쪽 상단에 텍스트 출력함수
-    function drawCoordinate() {
-      drawingPen.fillStyle = 'black';
-      drawingPen.font = '10px sans-serif';
-      drawingPen.fillText(`x: ${x}  y: ${y}`, 10, 20);  //★1_4 : 주인공 좌표출력
-    }
+        // 주인공 이동속도
+        const moveAmount = 5;
 
-    //주인공출력함수
-    function drawHero() {
-      drawingPen.fillStyle = 'black';
-      drawingPen.fillRect(x, y, 10, 10);
-    }
+        // 주인공 이동함수
+        function moveRight() {
+        x = x + moveAmount;
+        }
 
-    // 화면에 출력하기
-    function draw() {
-      drawingPen.fillText(`x: ${x}  y: ${y}`, 10, 20);  //★1_4 : 캔버스 왼쪽 상단에 텍스트 출력
-      drawingPen.clearRect(0, 0, canvas.width, canvas.height); //화면지우기
-      drawHero(); //주인공출력함수호출
+        function moveLeft() {
+        x = x - moveAmount;
+        }
 
-      move_limit();  //★1_4 : 주인공 이동제한 함수호출
-      drawCoordinate();  //★1_4 : 텍스트 출력 함수호출
-    }
+        function moveDown() {
+        y = y + moveAmount;
+        }
 
-    setInterval(draw, 16); // 60FPS
-	
-    // PC 방향키 조작
-    document.addEventListener('keydown', (e) => {
-      switch (e.key) {
-        case 'ArrowLeft': moveLeft(); break;
-        case 'ArrowRight': moveRight(); break;
-        case 'ArrowUp': moveUp(); break;
-        case 'ArrowDown': moveDown(); break;
-      }
-    });
+        function moveUp() {
+        y = y - moveAmount;
+        }
+
+        //★1_4 : 주인공 이동제한
+        function move_limit(){
+        if (x < 0) { //왼쪽이동제한
+            x = 0;
+        }
+        }
+
+        //캔버스 왼쪽 상단에 텍스트 출력함수
+        function drawCoordinate() {
+        drawingPen.fillStyle = 'black';
+        drawingPen.font = '10px sans-serif';
+        drawingPen.fillText(`x: ${x}  y: ${y}`, 10, 20);
+        }
+
+        //주인공출력함수
+        function drawHero() {
+        drawingPen.fillStyle = 'black';
+        drawingPen.fillRect(x, y, 10, 10);
+        }
+
+        // 화면에 출력하기
+        function draw() {
+        drawingPen.fillText(`x: ${x}  y: ${y}`, 10, 20);
+        drawingPen.clearRect(0, 0, canvas.width, canvas.height); //화면지우기
+        drawHero(); //주인공출력함수호출
+
+        move_limit();  //주인공 이동제한 함수호출
+        drawCoordinate();  //텍스트 출력 함수호출
+        }
+
+        setInterval(draw, 16); // 60FPS
+        
+        // PC 방향키 조작
+        document.addEventListener('keydown', (e) => {
+        switch (e.key) {
+            case 'ArrowLeft': moveLeft(); break;
+            case 'ArrowRight': moveRight(); break;
+            case 'ArrowUp': moveUp(); break;
+            case 'ArrowDown': moveDown(); break;
+        }
+        });
+
+        // ★1_5 : 버튼 이벤트 연결 : 버튼을 선택하면 해당 함수를 호출해서 주인공 이동     
+        document.getElementById('leftBtn').addEventListener('click', moveLeft);
+        document.getElementById('rightBtn').addEventListener('click', moveRight);
+        document.getElementById('upBtn').addEventListener('click', moveUp);
+        document.getElementById('downBtn').addEventListener('click', moveDown);        
   </script>  
 </body>
 </html>
-
